@@ -2,6 +2,7 @@
 v3.0.10-git
 -----------
 
+[mjr] Add the ability to specify the fields to return from contacts/search.
 [jan] Fix importing contacts with composite fields.
 [jan] Fix LDAP connection test (Bug #10554).
 [gwr] Avoid including the owner name into the default share (Kolab backend).
